# CEngine

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Private/: CEApplication.cpp
Core/Private/ECS/: CEComponent.cpp  CEEntity.cpp  CENode.cpp  CEScene.cpp  CESystem.cpp  CEUUID.cpp
Core/Private/ECS/Component/: CELookAtCameraComponent.cpp
Core/Private/ECS/System/: CEBaseMaterialSystem.cpp
Core/Private/Render/: CEMesh.cpp  CERenderContext.cpp  CERenderTarget.cpp  CERenderer.cpp  CETexture.cpp
Core/Public/: CEApplication.h  CEApplicationContext.h  CEEntryPoint.h
Core/Public/ECS/: CEComponent.h  CEEntity.h  CENode.h  CEScene.h  CESystem.h  CEUUID.h
Core/Public/ECS/Component/: CEBaseMaterialComponent.h  CELookAtCameraComponent.h  CEMeshComponent.h  CETransformComponent.h
Core/Public/ECS/System/: CEBaseMaterialSystem.h
Core/Public/Render/: CEMesh.h  CERenderContext.h  CERenderTarget.h  CERenderer.h  CETexture.h
Platform/: CMakeLists.txt
Platform/Private/: CEGeometryUtil.cpp  CELog.cpp
Platform/Private/Graphics/: CEDescriptorPool.cpp  CEGraphicContext.cpp  CEVulkanBuffer.cpp  CEVulkanCommandPool.cpp  CEVulkanFrameBuffer.cpp  CEVulkanGraphicContext.cpp  CEVulkanImage.cpp  CEVulkanImageView.cpp  CEVulkanLogicDevice.cpp  CEVulkanPipeline.cpp  CEVulkanQueue.cpp  CEVulkanRenderPass.cpp  CEVulkanSwapchain.cpp
Platform/Private/Window/: CEGlfwWindow.cpp  CEWindow.cpp
Platform/Public/: CEFileUtil.h  CEGeometryUtil.h  CELog.h  CEngine.h
Platform/Public/Graphics/: CEDescriptorPool.h  CEGraphicContext.h  CEVulkanBuffer.h  CEVulkanCommandPool.h  CEVulkanCommon.h  CEVulkanFrameBuffer.h  CEVulkanGraphicContext.h  CEVulkanImage.h  CEVulkanImageView.h  CEVulkanLogicDevice.h  CEVulkanPipeline.h  CEVulkanQueue.h  CEVulkanRenderPass.h  CEVulkanSwapchain.h
Platform/Public/Window/: CEGlfwWindow.h  CEWindow.h
Resource/Shader/: 01_hello_buffer.vert  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.frag.spv  02_descriptor_set.vert
Sample/: CMakeLists.txt
Sample/RenderCube/: CMakeLists.txt  main.cpp
Sample/SandBox/: CMakeLists.txt  main.cpp
cmake/: SPIR-V.cmake
